# EveJS

./: .gitignore  CLAUDE.md  README.en.md  README.md
.claude/: settings.json
Code/: .dockerignore  .gitattributes  .gitignore  BuildMarketSeed.bat  Dockerfile  Play.bat  PlayDebug.bat  README.md  StartMarketServer.bat  StartServeDebug.bat  StartServer.bat  compose.yaml  evejs.config.local.json  package.json
Code/doc/: CommandGuide.txt  LAUNCHERS.md  MARKET_SEEDER.md  MARKET_SETUP.md  NON_DOCKER_SETUP_AUDIT.md  SETUP.md  TOOLS.md  TROUBLESHOOTING.md
Code/docker/: entrypoint.sh  market-database-tool.js  market-seed-v2.toml  market-seed.toml  (+2 more)
Code/externalservices/market-server/: .gitignore  Cargo.toml  README.md  StartMarketServer.ps1
Code/externalservices/market-server/config/: market-server.benchmark.toml  market-server.example.toml  market-server.local.toml
Code/externalservices/market-server/crates/market-common/: Cargo.toml
Code/externalservices/market-server/crates/market-common/src/: lib.rs
Code/externalservices/market-server/runtime/: market-server.probe.toml  market-server.stress.toml
Code/externalservices/market-server/src/: config.rs  main.rs  rpc.rs  state.rs
Code/tools/market-seed/: .gitignore  BuildMarketSeed.bat  BuildMarketSeedGui.bat  Cargo.toml  MarketSeedGui.ps1  README.md
Code/tools/market-seed/config/: market-seed.benchmark.toml  market-seed.example.toml  market-seed.local.toml
Code/tools/market-seed/src/: config.rs  main.rs
Code/tools/market-seederv2/: BuildMarketSeedV2.bat  Cargo.toml  README.md
Code/tools/market-seederv2/config/: market-seederv2.local.toml
Code/tools/market-seederv2/src/: main.rs
Doc/: Debug_Commands_Reference.md  EveJS_Project_Overview.md  Loot_Wreck_System_Analysis.md  Mission_Agent_System_Analysis.md  Service_Modules_Reference.md
Issue/: 001-wreck-loot-not-pickable.md  002-missing-storyline-missions.md  README.md
(+742 files in other folders)
