[package]
name = "market-seed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
market-common = { path = "../../externalservices/market-server/crates/market-common" }
rayon = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
toml = "0.8"
