[package]
name = "market-seederv2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bzip2 = "0.4"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
csv = "1.3"
indicatif = "0.17"
market-common = { path = "../../externalservices/market-server/crates/market-common" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
